--- a/www/index.html
+++ b/www/index.html
@@ -1,21 +1,18 @@
 <html>
+  <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=yes"
+    />
 
-<head>
+    <link rel="manifest" href="manifest.json" />
+  </head>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+  <body>
+    <pwab-push></pwab-push>
 
-  <link rel="manifest" href="manifest.json" />
-
-</head>
-
-<body>
-
-  <pwab-push></pwab-push>
-
-  <script type="module">
-    import '../build/pwab-push.js';
-  </script>
-
-</body>
-
+    <script type="module">
+      import "../build/pwab-push.js";
+    </script>
+  </body>
 </html>
