monaco and webpack changes

--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     />
 
     <link rel="manifest" href="manifest.json" />
+    <script type="module" src="./monaco/monaco.js"></script>
   </head>
 
   <body>
