webpack bundle works, just not with shadow dom...

--- a/www/index.html
+++ b/www/index.html
@@ -6,11 +6,11 @@
     />
 
     <link rel="manifest" href="manifest.json" />
-    <script type="module" src="./monaco/monaco.js"></script>
+    <script src="./monaco/app.bundle.js"></script>
   </head>
 
   <body>
-    <pwab-push></pwab-push>
+    <pwab-push><h1>Testing, Testing, 123</h1></pwab-push>
 
     <script type="module">
       import "../build/pwab-push.js";
