copied over basic stuff for the service worker so I can test better

--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,11 @@
     />
 
     <link rel="manifest" href="manifest.json" />
+    <script
+      data-n-head="true"
+      src="/pwabuilder-sw-register.js"
+      type="module"
+    ></script>
     <script src="./monaco/app.bundle.js"></script>
   </head>
 
