--- a/www/index.html
+++ b/www/index.html
@@ -15,9 +15,9 @@
   </head>
 
   <body>
-    <!-- "http://localhost:3333/push"; // local -->
-    <!-- "https://pwabuilder-api-pre.azurewebsites.net/push"; // dev -->
-    <!-- "https://pwabuilder-api-prod.azurewebsites.net/push"; // production -->
+    <!-- url="http://localhost:3333/push"; // local -->
+    <!-- url="https://pwabuilder-api-pre.azurewebsites.net/push"; // dev -->
+    <!-- url="https://pwabuilder-api-prod.azurewebsites.net/push"; // production -->
     <pwab-push url="http://localhost:3333/push"
       ><h1>Testing, Testing, 123</h1></pwab-push
     >
