issue iwth the mock

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="manifest.json" />
     <script
       data-n-head="true"
-      src="/pwabuilder-sw-register.js"
+      src="./pwabuilder-sw-register.js"
       type="module"
     ></script>
     <script src="./monaco/app.bundle.js"></script>
