--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     >
     <script type="module">
       import "../build/pwab-push.js";
+      import "../build/pwab-samples.js";
     </script>
   </body>
 </html>
